# rental_search_agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/plans/: rental_search_mvp_implementation_fa0645c5.plan.md
docs/: rental-search-assistant-mvp-technical-spec.md  rental-search-assistant-mvp.md  rental-search-assistant-use-case.md
scripts/: test_search_columns.py
src/rental_search_agent/: __init__.py  adapter.py  agent.py  calendar_service.py  client.py  filtering.py  models.py  server.py  streamlit_app.py  summarizer.py  viewing_plan.py
tests/: conftest.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: __init__.py  test_adapter_search.py  test_client_tools.py  test_server_tools.py
tests/unit/: __init__.py  test_adapter_helpers.py  test_agent.py  test_calendar_parse.py  test_filtering.py  test_models.py  test_streamlit_helpers.py  test_summarizer.py  test_viewing_plan.py
