[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rental-search-agent"
version = "0.1.0"
description = "Rental Search Assistant MVP — MCP server, pyRealtor adapter, LLM agent, Chat UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyRealtor>=0.2.6",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "streamlit>=1.28",
    "folium>=0.15.0",
    "pydeck>=0.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[project.scripts]
rental-search-mcp = "rental_search_agent.server:main"
rental-search-client = "rental_search_agent.client:main"
rental-search-ui = "rental_search_agent.streamlit_app:run_ui"

[tool.setuptools.packages.find]
where = ["src"]
